--- a/lib/khttp/BUILD.bazel
+++ b/lib/khttp/BUILD.bazel
@@ -20,7 +20,10 @@ go_library(
 
 go_test(
     name = "go_default_test",
-    srcs = ["utils_test.go"],
+    srcs = [
+        "server_test.go",
+        "utils_test.go",
+    ],
     embed = [":go_default_library"],
     deps = ["@com_github_stretchr_testify//assert:go_default_library"],
 )
