--- a/enkit/BUILD.bazel
+++ b/enkit/BUILD.bazel
@@ -5,18 +5,7 @@ go_library(
     srcs = ["main.go"],
     importpath = "github.com/enfabrica/enkit/enkit",
     visibility = ["//visibility:private"],
-    deps = [
-        "//astore/client/commands:go_default_library",
-        "//enkit/outputs:go_default_library",
-        "//lib/bazel/commands:go_default_library",
-        "//lib/client:go_default_library",
-        "//lib/client/commands:go_default_library",
-        "//lib/kflags/kcobra:go_default_library",
-        "//lib/srand:go_default_library",
-        "//proxy/enfuse/fusecmd:go_default_library",
-        "//proxy/ptunnel/commands:go_default_library",
-        "@com_github_spf13_cobra//:go_default_library",
-    ],
+    deps = ["//enkit/cmd:go_default_library"],
 )
 
 go_binary(
