--- a/bazel/linux/run_um_kunit_tests.template
+++ b/bazel/linux/run_um_kunit_tests.template
@@ -14,4 +14,12 @@ UML_DIR=$(mktemp -u)
 ln -s ${TEST_TMPDIR} ${UML_DIR}
 
 {kernel} con0=null,fd:1 con1=null,fd:1 ubd0={rootfs} hostfs=$MODULE uml_dir=${UML_DIR} | tee $TMPOUTPUT
+
+# See SF-73 for background
+if egrep -q '^1..0' $TMPOUTPUT ; then
+    # munge the test output to fix-up the number of test suites
+    N_TESTS="$(grep '    # Subtest:' $TMPOUTPUT | wc -l)"
+    sed -i -e "s/^1..0/1..$N_TESTS/" $TMPOUTPUT
+fi
+
 {parser} parse < $TMPOUTPUT
