appengine: change rules to mandate providing a project attribute.
Background:
If gcloud is not passed a --project=, it will default to whatever
was configured when gcloud was last run. This is extremely risky.

In this PR:
- make passing a project= attribute mandatory.
- set project= in our BUILD.bazel file.

This rule should probably be moved to the internal repository.
Leaving it as a TODO for the future.

--- a/astore/server/BUILD.bazel
+++ b/astore/server/BUILD.bazel
@@ -108,6 +108,7 @@ go_appengine_deploy(
     name = "deploy",
     config = "deploy/app.yaml",
     entry = "github.com/enfabrica/enkit/astore/server",
+    project = "astore-284118",
     gomod = "//:go.mod",
     gosum = "//:go.sum",
     deps = [
