--- a/proxy/utils/BUILD.bazel
+++ b/proxy/utils/BUILD.bazel
@@ -1,8 +1,10 @@
-load("@io_bazel_rules_go//go:def.bzl", "go_library")
+load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")
 
 go_library(
     name = "go_default_library",
     srcs = [
+        "atomictime.go",
+        "clock.go",
         "counter.go",
         "types.go",
         "whitelist.go",
@@ -10,4 +12,14 @@ go_library(
     importpath = "github.com/enfabrica/enkit/proxy/utils",
     visibility = ["//visibility:public"],
     deps = ["//lib/oauth:go_default_library"],
+)
+
+go_test(
+    name = "go_default_test",
+    srcs = [
+        "atomictime_test.go",
+        "counter_test.go",
+    ],
+    embed = [":go_default_library"],
+    deps = ["@com_github_stretchr_testify//assert:go_default_library"],
 )
