--- a/bazel/utils/BUILD.bazel
+++ b/bazel/utils/BUILD.bazel
@@ -1,7 +1,14 @@
+load("@bazel_skylib//:bzl_library.bzl", "bzl_library")
 load("//bazel/utils:diff_test.bzl", "diff_test")
 load("//bazel/utils:types.bzl", "escape_and_join")
 load("//bazel/utils:merge_kwargs_test.bzl", "merge_kwargs_test_suite")
 load("//bazel/utils:files.bzl", "write_to_file")
+
+bzl_library(
+    name = "diff_test_bzl",
+    srcs = ["diff_test.bzl"],
+    visibility = ["//visibility:public"],
+)
 
 exports_files(["run_clang_format.template.sh"])
 
