gazelle: Run on entire repo
This change runs `bazel run //:gazelle` to update BUILD files where
necessary, minimizing diffs in future changes.

--- a/tools/codegen/tests/BUILD.bazel
+++ b/tools/codegen/tests/BUILD.bazel
@@ -2,8 +2,11 @@ load("//tools/codegen:codegen.bzl", "codegen_test")
 
 codegen_test(
     name = "gen-test",
-    expected = "gen-test.expected",
-    data = ["data.yaml"],
     srcs = ["test.template"],
-    overrides = ["over=rides", "zoo=zebra"],
+    data = ["data.yaml"],
+    expected = "gen-test.expected",
+    overrides = [
+        "over=rides",
+        "zoo=zebra",
+    ],
 )
