handle missing attributes

--- a/tools/bzldoc/md.template
+++ b/tools/bzldoc/md.template
@@ -25,13 +25,15 @@ Source code: https://github.com/enfabrica/internal/{{ short_path }}
 {{ v.kwargs.doc }}
 {%-   endif %}
 
+{%-   if "attrs" in v.kwargs %}
+{# blank line #}
 <table><thead><tr>
 <th> Attribute </th><th> Type </th><th> Description </th>
 </tr></thead><tbody>
-{%-   for ak, av in v.kwargs.attrs.items() %}
-{%-     set attrparts = av.name.split(".") %}
-{%-     set attrlib = attrparts[0] %}
-{%-     set attrtype = attrparts[1] %}
+{%-     for ak, av in v.kwargs.attrs.items() %}
+{%-       set attrparts = av.name.split(".") %}
+{%-       set attrlib = attrparts[0] %}
+{%-       set attrtype = attrparts[1] %}
 <tr><td>
 
 {{ ak }}
@@ -45,9 +47,14 @@ Source code: https://github.com/enfabrica/internal/{{ short_path }}
 {{ av.kwargs.doc }}
 
 </td></tr>
-{%-   endfor %}
+{%-   endfor %}{# ak, av #}
 </tbody></table>
 {# blank line #}
+{%-   else %}{# check for attrs #}
+
+(This rule has no attributes.)
+{# blank line #}
+{%-   endif %}{# check for attrs #}
 
 {%- endfor %}{# k, v #}
 
