--- a/tools/bzldoc/md.template
+++ b/tools/bzldoc/md.template
@@ -25,7 +25,10 @@ Source code: https://github.com/enfabrica/internal/{{ short_path }}
 {{ v.kwargs.doc }}
 {%-   endif %}
 
-{%-   if "attrs" in v.kwargs %}
+{%-   if "attrs" not in v.kwargs or not v.kwargs.attrs %}
+
+(This rule has no attributes.)
+{%-   else %}{# check for attrs #}
 {# blank line #}
 <table><thead><tr>
 <th> Attribute </th><th> Type </th><th> Description </th>
@@ -47,12 +50,8 @@ Source code: https://github.com/enfabrica/internal/{{ short_path }}
 {{ av.kwargs.doc }}
 
 </td></tr>
-{%-   endfor %}{# ak, av #}
+{%-     endfor %}{# ak, av #}
 </tbody></table>
-{# blank line #}
-{%-   else %}{# check for attrs #}
-
-(This rule has no attributes.)
 {# blank line #}
 {%-   endif %}{# check for attrs #}
 
