--- a/proxy/nss/BUILD.bazel
+++ b/proxy/nss/BUILD.bazel
@@ -63,6 +63,6 @@ cc_test(
     deps = [
         ":nss_autouser-fortesting",
         "//proxy/nss/confparse",
-        "@gtest//:gtest_main",
+        "@com_google_googletest//:gtest_main",
     ],
 )
