--- a/proxy/nss/confparse/BUILD.bazel
+++ b/proxy/nss/confparse/BUILD.bazel
@@ -37,6 +37,6 @@ cc_test(
     ],
     deps = [
         ":confparse",
-        "@gtest//:gtest_main",
+        "@com_google_googletest//:gtest_main",
     ],
 )
