--- a/astore/client/commands/BUILD.bazel
+++ b/astore/client/commands/BUILD.bazel
@@ -20,6 +20,7 @@ go_library(
         "//lib/client:go_default_library",
         "//lib/config:go_default_library",
         "//lib/config/defcon:go_default_library",
+        "//lib/config/marshal:go_default_library",
         "//lib/kflags:go_default_library",
         "//lib/kflags/kcobra:go_default_library",
         "@com_github_dustin_go_humanize//:go_default_library",
