--- a/astore/client/commands/BUILD.bazel
+++ b/astore/client/commands/BUILD.bazel
@@ -1,4 +1,4 @@
-load("@io_bazel_rules_go//go:def.bzl", "go_library")
+load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")
 
 go_library(
     name = "go_default_library",
@@ -20,6 +20,7 @@ go_library(
         "//lib/client:go_default_library",
         "//lib/config:go_default_library",
         "//lib/config/defcon:go_default_library",
+        "//lib/config/marshal:go_default_library",
         "//lib/kflags:go_default_library",
         "//lib/kflags/kcobra:go_default_library",
         "@com_github_dustin_go_humanize//:go_default_library",
@@ -29,4 +30,13 @@ go_library(
         "@org_golang_google_grpc//codes:go_default_library",
         "@org_golang_google_grpc//status:go_default_library",
     ],
+)
+
+go_test(
+    name = "go_default_test",
+    srcs = [
+        "formatter_test.go",
+    ],
+    embed = [":go_default_library"],
+    deps = ["@com_github_stretchr_testify//assert:go_default_library"],
 )
