--- a/proxy/nasshp/BUILD.bazel
+++ b/proxy/nasshp/BUILD.bazel
@@ -7,6 +7,7 @@ go_library(
         "browser.go",
         "counters.go",
         "nassh.go",
+        "resolver.go",
         "window.go",
     ],
     importpath = "github.com/enfabrica/enkit/proxy/nasshp",
@@ -40,5 +41,6 @@ go_test(
         "//proxy/utils:go_default_library",
         "@com_github_gorilla_websocket//:go_default_library",
         "@com_github_stretchr_testify//assert:go_default_library",
+        "@com_github_stretchr_testify//require:go_default_library",
     ],
 )
