--- a/astore/BUILD.bazel
+++ b/astore/BUILD.bazel
@@ -1,26 +1,21 @@
 load("@io_bazel_rules_go//go:def.bzl", "go_test")
 
-# gazelle:exclude e2e_test.go
 go_test(
     name = "go_default_test",
-    srcs = ["server_test.go"],
-    data = glob(["testdata/**"]),
-    deps = [
-        "//astore/atesting:go_default_library",
-        "//astore/rpc:astore-go",
-        "//astore/server/astore:go_default_library",
-        "//lib/srand:go_default_library",
-        "@org_golang_google_grpc//:go_default_library",
-        "@org_golang_google_grpc//test/bufconn:go_default_library",
+    srcs = [
+        "e2e_test.go",
+        "server_test.go",
     ],
-)
-
-go_test(
-    name = "e2e_test",
-    srcs = ["e2e_test.go"],
     data = glob(["testdata/**"]),
-    local = True,
-    tags = ["manual"],
+    tags = [
+        # This test spins up emulated Datastore and therefore probably shouldn't
+        # run on Buildbarn.
+        "manual",
+        "no-remote",
+        # TODO(INFRA-1233): This test can't run in the dev container until we
+        # install its dependencies (Datastore emulator)
+        "no-cloudbuild",
+    ],
     deps = [
         "//astore/atesting:go_default_library",
         "//astore/client/astore:go_default_library",
