enkit: Add version subcommand
This change adds a `version` subcommand to enkit that prints linkstamped
info so that we can more easily debug issues that arise from an
out-of-date enkit version.

Tested: `bazel run //enkit -- version`

--- a/enkit/cmd/BUILD.bazel
+++ b/enkit/cmd/BUILD.bazel
@@ -8,6 +8,7 @@ go_library(
     deps = [
         "//astore/client/commands:go_default_library",
         "//enkit/outputs:go_default_library",
+        "//enkit/version:go_default_library",
         "//lib/bazel/commands:go_default_library",
         "//lib/client:go_default_library",
         "//lib/client/commands:go_default_library",
