bazel/meson: fix wrong paths
Set the install prefix to be a subdirectory of $BUILD_TMPDIR because
rules_foreign_cc/framework.bzl replaces in the generated files any path
that is under $BUILD_TMPDIR with the appropriate placeholder (such as
$EXT_BUILD_DEPS).

Signed-off-by: George Prekas <george@enfabrica.net>

--- a/bazel/meson/test/BUILD.bazel
+++ b/bazel/meson/test/BUILD.bazel
@@ -9,6 +9,9 @@ meson(
     name = "hello",
     lib_source = ":src",
     out_binaries = [
-        "hello",
+        # It looks like a limitation of rules_foreign_cc where you cannot have
+        # a generated file with the same name as the rule because it creates a
+        # directory named as the rule in the build directory.
+        "hello_bin",
     ],
 )
