--- a/astore/server/BUILD.bazel
+++ b/astore/server/BUILD.bazel
@@ -13,11 +13,11 @@ go_library(
         "//astore/common:go_default_library",
         "//astore/rpc/astore:go_default_library",
         "//astore/rpc/auth:go_default_library",
-        "//astore/server/assets:go_default_library",
+        "//astore/server/assets:go_default_library",  # keep
         "//astore/server/astore:go_default_library",
         "//astore/server/auth:go_default_library",
-        "//astore/server/configs:go_default_library",
-        "//astore/server/credentials:go_default_library",
+        "//astore/server/configs:go_default_library",  # keep
+        "//astore/server/credentials:go_default_library",  # keep
         "//astore/server/templates",
         "//lib/kflags:go_default_library",
         "//lib/kflags/kcobra:go_default_library",
@@ -27,6 +27,7 @@ go_library(
         "//lib/logger:go_default_library",
         "//lib/oauth:go_default_library",
         "//lib/oauth/ogrpc:go_default_library",
+        "//lib/oauth/providers:go_default_library",
         "//lib/server:go_default_library",
         "//lib/srand:go_default_library",
         "@com_github_spf13_cobra//:go_default_library",
