--- a/lib/oauth/ogoogle/BUILD.bazel
+++ b/lib/oauth/ogoogle/BUILD.bazel
@@ -1,4 +1,4 @@
-load("@io_bazel_rules_go//go:def.bzl", "go_library")
+load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")
 
 go_library(
     name = "go_default_library",
@@ -14,5 +14,17 @@ go_library(
         "@org_golang_google_api//option:go_default_library",
         "@org_golang_x_oauth2//:go_default_library",
         "@org_golang_x_oauth2//google:go_default_library",
+    ],
+)
+
+go_test(
+    name = "go_default_test",
+    srcs = ["google_test.go"],
+    embed = [":go_default_library"],
+    deps = [
+        "//lib/logger:go_default_library",
+        "//lib/oauth:go_default_library",
+        "//lib/oauth/providers:go_default_library",
+        "@com_github_stretchr_testify//assert:go_default_library",
     ],
 )
