--- a/lib/khttp/kclient/BUILD.bazel
+++ b/lib/khttp/kclient/BUILD.bazel
@@ -5,5 +5,8 @@ go_library(
     srcs = ["client.go"],
     importpath = "github.com/enfabrica/enkit/lib/khttp/kclient",
     visibility = ["//visibility:public"],
-    deps = ["//lib/kflags:go_default_library"],
+    deps = [
+        "//lib/kflags:go_default_library",
+        "//lib/khttp/ktls:go_default_library",
+    ],
 )
