--- a/lib/khttp/ktransport/BUILD.bazel
+++ b/lib/khttp/ktransport/BUILD.bazel
@@ -6,6 +6,7 @@ go_library(
     importpath = "github.com/enfabrica/enkit/lib/khttp/ktransport",
     visibility = ["//visibility:public"],
     deps = [
+        "//lib/kflags:go_default_library",
         "//lib/khttp/ktls:go_default_library",
         "@org_golang_x_net//http2:go_default_library",
     ],
