--- a/lib/khttp/BUILD.bazel
+++ b/lib/khttp/BUILD.bazel
@@ -10,11 +10,16 @@ go_library(
     importpath = "github.com/enfabrica/enkit/lib/khttp",
     visibility = ["//visibility:public"],
     deps = [
+        "//lib/goroutine:go_default_library",
         "//lib/kflags:go_default_library",
+        "//lib/khttp/kserver:go_default_library",
+        "//lib/khttp/ktls:go_default_library",
         "//lib/logger:go_default_library",
         "//lib/multierror:go_default_library",
         "@com_github_kirsle_configdir//:go_default_library",
         "@org_golang_x_crypto//acme/autocert:go_default_library",
+        "@org_golang_x_net//http2:go_default_library",
+        "@org_golang_x_net//http2/h2c:go_default_library",
     ],
 )
 
